--- a/package.json
+++ b/package.json
@@ -8,18 +8,21 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist",
+    "predeploy": "npm run build"
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
     "@tailwindcss/vite": "^4.1.4",
     "clsx": "^2.1.1",
     "framer-motion": "^12.9.2",
+    "lucide-react": "^0.503.0",
     "motion": "^12.9.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.5.1",
+    "react-router-dom": "^7.5.3",
     "react-scroll": "^1.9.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.4"
@@ -32,6 +35,7 @@
     "eslint": "^9.22.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "gh-pages": "^6.3.0",
     "globals": "^16.0.0",
     "vite": "^6.3.1"
   }
