--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ai-directory",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://ChameleonAI545.github.io/website",
+  "homepage": "https://ChameleonAI545.github.io/website/",
   "type": "module",
   "scripts": {
     "dev": "vite",
